# indoeuropop

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.agents/: README.md  agent-config.default.json  worktrees.json
curation/: aadr-v66-central-europe-child-overrides-interaction-best.toml  aadr-v66-central-europe-child-overrides.toml  aadr-v66-western-europe-comparison.toml  aadr-v66-western-europe-qpadm-rerun-manifest.json  aadr-v66-western-europe-qpadm-rerun-targets.tsv  aadr-v66-western-europe-qpadm-targets.tsv  aadr-v66-western-europe-target-decisions.csv  local-aadr-v66-data-sources.toml
docs/: aadr-group-suggestions.md  aadr-loading.md  aadr-target-inputs.md  age-structure.md  alternative-implementation-evaluation.md  central-europe-override-decision.md  data-source-catalog.md  debugging-comparisons.md  emulator-training.md  emulator-validation.md  epidemic-compartments.md  event-schedules.md  experiment-manifests.md  output-provenance.md  parameter-sweeps.md  parameter-tables.md  project-plan.md  qpadm-estimates.md  qpadm-workflow.md  real-target-workflow.md  reporting-exports.md  reproducibility-fingerprints.md  sample-ancestry-estimates.md  sample-metadata-schema.md  sensitivity-analysis.md  sex-biased-reproduction.md  simulation-diagnostics.md  source-downloads.md  summary-statistics.md  sweep-workflows.md  target-comparison-workflow.md  target-curation-audit.md  target-curation.md  target-data-pipeline.md  target-data-schema.md  target-decisions.md  target-fit-scoring.md  target-residual-review.md  validation-splits.md  workflow-api.md
(+312 files in other folders)
