[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "indoeuropop"
version = "0.1.0"
description = "Research scaffold for mechanistic Indo-European population dynamics models."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "IndoEuroPop contributors" }]
dependencies = [
    "matplotlib>=3.8",
    "numpy>=1.26",
]

[project.scripts]
indoeuropop = "indoeuropop.orchestration.cli:main"

[dependency-groups]
dev = [
    "black>=24.10.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    "if __name__ == .__main__.:",
]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = ["matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "--strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["B", "C4", "E", "F", "I", "N", "RUF", "SIM", "UP"]
